2005-08-11  Sam Steingold  <sds@gnu.org>

	* makemake.in (DEVPREFIX): simplified

2005-08-10  Sam Steingold  <sds@gnu.org>

	* m4/onceonly.m4: use gnulib/m4/onceonly_2_57.m4

2005-08-10  Sam Steingold  <sds@gnu.org>

	* init.lisp (char-invertcase, string-invertcase)
	(nstring-invertcase): export
	* charstrg.d (STRING-INVERTCASE): accept :START and :END
	(NSTRING-INVERTCASE): implemented
	* constsym.d (NSTRING-INVERTCASE): added
	(char-invertcase, string-invertcase): moved from SYS to EXT
	* subr.d (string-invertcase): accept :START and :END
	(nstring-invertcase): added
	* subrkw.d (string-invertcase, nstring-invertcase): added

2005-08-05  Sam Steingold  <sds@gnu.org>

	* compiler.lisp (compile-file): put source line number into the
	name of the compiled top-level form
	* init.lisp (*current-source-line-1*, *current-source-line-2*): added
	(sys::check-redefinition): FILE doc is now (file start-line end-line)
	(eval-loaded-form-low): set *CURRENT-SOURCE-LINE-[12]* from the
	compiled top-level form
	(load): bind and set *CURRENT-SOURCE-LINE-[12]*

2005-08-05  Sam Steingold  <sds@gnu.org>

	* macros3.lisp (compiled-file-p): implemented CLRFI-2
	<http://clrfi.alu.org/clrfi/clrfi-2-compiled-file-p>

2005-08-04  Sam Steingold  <sds@gnu.org>

	make configure creation process more robust
	* Makefile.devel (MODULES, MOD_CONFIGURES, MOD_CONFIG_H_IN)
	(CLISP_CONFIGURES, FFCALL, FFCALL_CONFIGURES): new variables
	(CONFIGURES, CONFIG_H_IN): use them
	(src/autoconf/aclocal.m4): depend only on CLISP_CONFIGURES

2005-08-04  Sam Steingold  <sds@gnu.org>

	updated bundled regex to the latest gnulib version
	* configure.in: call gl_USE_SYSTEM_EXTENSIONS
	* modules/regexp/configure.in: use gl_INCLUDED_REGEX instead of
	CL_REGEXP; do not call AC_AIX (done by toplevel)
	* modules/wildcard/configure.in: do not call AC_AIX (done by toplevel)
	* modules/regexp/regex.c, modules/regexp/regex.h: updated
	* modules/regexp/regex_internal.c, modules/regexp/regex_internal.h: